# multiomic-ml-grn

./: README.md  pyproject.toml  requirements.txt
analysis/: grn_results_analysis.ipynb  manuscript_figures.ipynb  spear_results_analysis.ipynb
docs/: config_reference.md  endothelial_dataset.md  master_runbook.md  mouse_esc_dataset.md  pipeline_overview.md
scripts/: README.md  combine_chunk_results.py  combine_filtered.py  download_mesc_raw_data.py  plot_feature_importance_vs_tss.py  preflight_check.py  preprocess.py  select_random_genes.py
src/ml_grn_pipeline/: __init__.py  cli.py  config.py  data.py  evaluation.py  logging_utils.py  models.py  training.py  visualization.py
src/spear/: README.md  __init__.py  cli.py  config.py  data.py  evaluation.py  metrics.py  models.py  predict.py  training.py  visualization.py
