[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spear"
version = "0.1.0"
description = "SPEAR: Single-cell Prediction of gene Expression from ATAC-seq Regression"
readme = "README.md"
authors = [{name = "tqw5435"}]
requires-python = ">=3.10"
dependencies = [
    "anndata>=0.10",
    "numpy>=1.24",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "scanpy>=1.10",
    "torch>=2.1",
    "xgboost>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "black>=24.4",
    "ruff>=0.5",
    "pytest>=7.4",
]
notebook = [
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["spear"]

[project.scripts]
spear = "spear.cli:main"
